--- a/src/components/Wrapper.module.css
+++ b/src/components/Wrapper.module.css
@@ -1,4 +1,6 @@
 .wrapper {
+  display: flex;
+  justify-content: space-evenly;
   outline: 5px solid rgb(96, 195, 134);
   width: 660px;
   background-color: rgb(149, 201, 169);
